--- a/news.html
+++ b/news.html
@@ -1,13 +1,10 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML >
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Пример веб-страницы</title>
  </head>
-	<link href="https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic"
-	rel="stylesheet">
  <body>
-<a href="news.html">News</a>
-  Demo1.1
+ NEWS
  </body>
 </html>
